examples/test/testpolicy749.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy749
  namespace: namespace308
spec:
  podSelector:
    matchLabels:
      key0: value6
      key33: value46
      key25: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value1
      podSelector:
        matchLabels:
          key44: value20
          key49: value15
